Fixed padding on mobile tournaments

--- a/resources/css/sass/pages/_ranklist.scss
+++ b/resources/css/sass/pages/_ranklist.scss
@@ -270,7 +270,7 @@
     padding-top: 50px !important;
 
     &.tournament{
-      padding-top: 20px !important;
+      padding-top: 0px !important;
     }
 
     .ranking-entry {
